--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </form>
     </div>
     <div style="height: 60vh; display:  flex; justify-content: center; width: 100%;">
-        <iframe height="100%" width="50%" src="https://extdev.tartanhq.com/?tkn=wmrzylwk&companyId=tartan"></iframe>
+        <iframe height="100%" width="50%" src="https://external.tartanhq.com/?tkn=wmrzylwk&companyId=tartan"></iframe>
     </div>
     <script>
         const submitE = (e) => {
