--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <button>Go</button>
         </form>
     </div>
-    <div style="height: 60vh; display:  flex; justify-content: center; width: 100%;">
+    <div style="height: 812px; display:  flex; justify-content: center; width: 375px;">
         <iframe height="100%" width="50%" src="https://external.tartanhq.com/?tkn=wmrzylwk&companyId=tartan"></iframe>
     </div>
     <script>
