--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div style="height: 30vh; display: flex; flex-direction: column;; justify-content: center; align-items: center;">
-        <p>Iframe inside status: <strong id="stat"></strong></p>
+        <p>Iframe inside status: <strong style="color: blue;" id="stat"></strong></p>
         <p style="font-weight:  bold; font-size: 50px;" id="write">External (Parent)</p>
     </div>
     <div style="display: flex; justify-content: center; width: 100%;">
